Bug 387253 - Bookmark not removed from the filtered list when removing it while filtering. patch by Markus Magnuson <markus.magnuson@gmail.com>, r=smorgan, r=cl-bugs, sr=pink